possibly fix layout bug

--- a/content/css/styles.css.scss
+++ b/content/css/styles.css.scss
@@ -19,6 +19,7 @@ body {
   font-size: 42pt;
   line-height: 36px;
   margin: 0;
+  display: inline-block;
 }
 
 #header .subtitle {
@@ -28,7 +29,7 @@ body {
   font-weight: 600;
   line-height: 20px;
   text-transform: uppercase;
-  margin: 10px 0 8px 0;
+  margin: 5px 0 8px 0;
 }
 
 #header .subtitle i {
